force-app/main/default/objects/MUSW__Junction_Add_Setting__mdt/fields/MUSW__Button_Label__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Button_Label__c</fullName>
    <description>Determines what text the action button will say in the list view or in the portal. Left blank blank it will read “Done.”</description>
    <inlineHelpText>Determines what text the action button will say in the list view or in the portal. Left blank blank it will read “Done.”</inlineHelpText>
    <label>Button Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>