force-app/main/default/objects/MUSW__Junction_Add_Setting__mdt/fields/MUSW__List_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__List_Object_Name__c</fullName>
    <description>Full API name for the object from which the List of available records will be generated.</description>
    <inlineHelpText>Full API name for the object from which the List of available records will be generated.</inlineHelpText>
    <label>List Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>