force-app/main/default/objects/MUSW__Junction_Add_Setting__mdt/fields/MUSW__List_Parent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>MUSW__List_Parent_Lookup__c</fullName>
    <description>If using a lookup to further filter the results that will be presented in the list (such as with an Account), enter the full API name for the shared field on the List object.</description>
    <inlineHelpText>If using a lookup to further filter the results that will be presented in the list (such as with an Account), enter the full API name for the shared field on the List object.</inlineHelpText>
    <label>Parent Lookup Field API Name (List)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>