force-app/main/default/objects/MUSW__Junction_Add_Setting__mdt/fields/MUSW__Page_Title__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Page_Title__c</fullName>
    <description>Title of the page you want to display to the end user. Left blank, it will read “Select records to associate with [the current record name].”</description>
    <inlineHelpText>Title of the page you want to display to the end user. Left blank, it will read “Select records to associate with [the current record name].”</inlineHelpText>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>