force-app/main/default/objects/MUSW__Junction_Add_Setting__mdt/fields/MUSW__User_Filter_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>MUSW__User_Filter_Fieldset__c</fullName>
    <description>Name of the Field Set you created to to allow the user to filter the list results.</description>
    <inlineHelpText>Name of the Field Set you created to to allow the user to filter the list results.</inlineHelpText>
    <label>User Defined Filter Field Set Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>